--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Face Beauty Analyzer</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Face Beauty Analyzer</title>
+<style>
+  #overlayCanvas {
+    border: 1px solid black;
+    max-width: 100%;
+  }
+</style>
 </head>
 <body>
-  <h1>Upload Your Face</h1>
-  <form id="uploadForm">
-    <input type="file" id="imageInput" accept="image/*" required />
-    <button type="submit">Analyze</button>
-  </form>
 
-  <div id="result"></div>
+<h1>Face Beauty Analyzer</h1>
 
-  <script src="script.js"></script>
+<form id="uploadForm">
+  <input type="file" id="imageInput" accept="image/*" required />
+  <button type="submit">Analyze</button>
+</form>
+
+<p id="result"></p>
+
+<!-- Image element to load file (hidden) -->
+<img id="uploadedImage" style="display:none" crossorigin="anonymous" />
+
+<!-- Canvas for drawing -->
+<canvas id="overlayCanvas"></canvas>
+
+<script src="script.js"></script>
 </body>
 </html>
