--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <style>
   #overlayCanvas {
     border: 1px solid black;
+    display: block;
     max-width: 100%;
+    height: auto;
   }
 </style>
 </head>
@@ -22,8 +24,8 @@
 
 <p id="result"></p>
 
-<!-- Image element to load file (hidden) -->
-<img id="uploadedImage" style="display:none" crossorigin="anonymous" />
+<!-- Image element to load the file, hidden (no crossorigin attribute) -->
+<img id="uploadedImage" style="display:none" />
 
 <!-- Canvas for drawing -->
 <canvas id="overlayCanvas"></canvas>
