--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Face Beauty Analyzer</title>
+  <link rel="icon" href="favicon.ico" />
   <style>
     #overlayCanvas {
       border: 1px solid black;
