--- a/index.html
+++ b/index.html
@@ -6,18 +6,67 @@
   <title>Face Beauty Analyzer</title>
   <link rel="icon" href="favicon.ico" />
   <style>
-    #overlayCanvas {
-      border: 1px solid black;
-      display: block;
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+      padding: 2rem;
+      margin: 0;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 2rem;
+    }
+
+    input[type="file"] {
+      margin-bottom: 1rem;
+      color: #fff;
+    }
+
+    button {
+      padding: 0.7rem 1.5rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      background: #ff0055;
+      color: #fff;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background: #ff3366;
+    }
+
+    #result {
+      margin: 1.5rem 0;
+      font-size: 1.1rem;
+      text-align: center;
+    }
+
+    canvas {
       max-width: 100%;
-      height: auto;
-      margin-top: 20px;
+      margin-top: 1rem;
+      border: 2px solid #fff;
     }
   </style>
 </head>
 <body>
 
-  <h1>Face Beauty Analyzer</h1>
+  <h1>RatingU Beauty Analyzer</h1>
 
   <form id="uploadForm">
     <input type="file" id="imageInput" accept="image/*" required />
@@ -26,10 +75,7 @@
 
   <p id="result"></p>
 
-  <!-- Hidden image element used for loading the uploaded image -->
-  <img id="uploadedImage" style="display:none" alt="Uploaded" />
-
-  <!-- Canvas to show image and measurement lines -->
+  <img id="uploadedImage" style="display:none;" alt="Uploaded image for analysis" />
   <canvas id="overlayCanvas"></canvas>
 
   <script src="script.js"></script>
