--- a/index.html
+++ b/index.html
@@ -1,102 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Face Beauty Analyzer</title>
-  <link rel="icon" href="favicon.ico" />
-  <style>
-    body {
-      background-color: #000;
-      color: #fff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      min-height: 100vh;
-      padding: 2rem;
-      margin: 0;
+// Image input feedback
+const imageInput = document.getElementById('imageInput');
+const fileLabel = document.getElementById('fileLabel');
+
+imageInput.addEventListener('change', () => {
+  if (imageInput.files.length > 0) {
+    fileLabel.classList.add('uploaded');
+    fileLabel.textContent = 'Uploaded';
+  }
+});
+
+document.getElementById('uploadForm').addEventListener('submit', async (e) => {
+  e.preventDefault();
+
+  // Reset button state
+  fileLabel.classList.remove('uploaded');
+  fileLabel.textContent = 'Choose Image';
+
+  const file = imageInput.files[0];
+  const formData = new FormData();
+  formData.append('image', file);
+
+  const resultDiv = document.getElementById('result');
+  resultDiv.innerHTML = 'Analyzing...';
+
+  try {
+    const res = await fetch('https://ratingyou-analysis-api.onrender.com/analyze', {
+      method: 'POST',
+      body: formData
+    });
+
+    const data = await res.json();
+
+    if (data.error) {
+      resultDiv.innerHTML = `Error: ${data.error}`;
+    } else {
+      resultDiv.innerHTML = `
+        <p><strong>Beauty Score:</strong> ${data.beauty_score}/100</p>
+        <p><strong>Eye Distance:</strong> ${data.eye_distance.toFixed(4)}</p>
+      `;
     }
 
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 2rem;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 1rem;
-      margin-bottom: 2rem;
-    }
-
-    /* Hide the default file input */
-    #imageInput {
-      display: none;
-    }
-
-    /* Custom file input button */
-    .custom-file-upload {
-      padding: 0.7rem 1.5rem;
-      font-size: 1rem;
-      border-radius: 8px;
-      background: #fff;
-      color: #000;
-      cursor: pointer;
-      border: none;
-      transition: background 0.3s ease;
-      text-align: center;
-    }
-
-    .custom-file-upload:hover {
-      background: #ccc;
-    }
-
-    button {
-      padding: 0.7rem 1.5rem;
-      font-size: 1rem;
-      border: none;
-      border-radius: 8px;
-      background: #fff;
-      color: #000;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    button:hover {
-      background: #ccc;
-    }
-
-    #result {
-      margin: 1.5rem 0;
-      font-size: 1.1rem;
-      text-align: center;
-    }
-
-    canvas {
-      max-width: 100%;
-      margin-top: 1rem;
-      border: none;
-    }
-  </style>
-</head>
-<body>
-
-  <h1>Face Beauty Analyzer</h1>
-
-  <form id="uploadForm">
-    <label for="imageInput" class="custom-file-upload">Choose Image</label>
-    <input type="file" id="imageInput" accept="image/*" required />
-    <button type="submit">Analyze</button>
-  </form>
-
-  <p id="result"></p>
-
-  <img id="uploadedImage" style="display:none;" alt="Uploaded image for analysis" />
-  <canvas id="overlayCanvas"></canvas>
-
-  <script src="script.js"></script>
-</body>
-</html>
+    // Draw image & lines
+    const imgElement = document.getElementById('uploadedImage');
+    imgElement.src = URL.createObjectURL(file);
+    imgElement.onload = () => {
+      const canvas = document.getElementById('overlayCanvas');
+      const ctx = canvas.getContext('2d');
+      canvas.width = imgElement.width;
+      canvas.height = imgElement.height;
+      ctx.drawImage(imgElement, 0, 0);
+      if (data.measurements && data.measurements.length > 0) {
+        ctx.strokeStyle = 'red';
+        ctx.lineWidth = 2;
+        data.measurements.forEach(pair => {
+          ctx.beginPath();
+          ctx.moveTo(pair[0][0], pair[0][1]);
+          ctx.lineTo(pair[1][0], pair[1][1]);
+          ctx.stroke();
+        });
+      }
+    };
+    imgElement.style.display = 'none'; // stays hidden
+  } catch (err) {
+    resultDiv.innerHTML = 'Something went wrong.';
+    console.error(err);
+  }
+});
