--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Face Beauty Analyzer</title>
-<link rel="icon" href="favicon.ico" />
+<title>RatingU Beauty Analyzer</title>
+ <link rel="icon" href="favicon.ico" />
 <style>
   #overlayCanvas {
     border: 1px solid black;
