--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
       border: 1px solid #ccc;
       max-width: 100%;
       margin-top: 20px;
-    }
-    img {
-      max-width: 100%;
       display: block;
-      margin: 20px auto;
     }
   </style>
 </head>
@@ -32,10 +28,7 @@
 
   <p id="result"></p>
 
-  <!-- Image Preview -->
-  <img id="uploadedImage" alt="Uploaded Image" />
-
-  <!-- Canvas for red lines -->
+  <!-- Only canvas now -->
   <canvas id="overlayCanvas"></canvas>
 
   <script src="script.js"></script>
