--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
 
   <p id="result"></p>
 
-  <!-- Only canvas now -->
+  <!-- Only canvas shown -->
   <canvas id="overlayCanvas"></canvas>
 
+  <!-- Script -->
   <script src="script.js"></script>
 </body>
 </html>
