--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
   <p id="result"></p>
 
-  <!-- Only canvas shown -->
+  <!-- Canvas for drawing -->
   <canvas id="overlayCanvas"></canvas>
 
-  <!-- Script -->
+  <!-- Load script AFTER all HTML elements -->
   <script src="script.js"></script>
 </body>
 </html>
