--- a/index.html
+++ b/index.html
@@ -7,22 +7,35 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 20px;
+      margin: 40px auto;
+      max-width: 600px;
       text-align: center;
     }
-    canvas {
-      border: 1px solid #ccc;
-      max-width: 100%;
+
+    input[type="file"] {
       margin-top: 20px;
     }
+
+    button {
+      margin-top: 10px;
+      padding: 8px 16px;
+    }
+
+    canvas {
+      margin-top: 20px;
+      max-width: 100%;
+      border: 1px solid #ccc;
+    }
+
     #result {
       margin-top: 20px;
-      font-size: 1.2em;
+      font-size: 1.1em;
     }
+
     .ideal {
-      color: #888;
+      color: gray;
       font-size: 0.9em;
-      margin-left: 8px;
+      margin-left: 6px;
     }
   </style>
 </head>
@@ -31,6 +44,7 @@
 
   <form id="uploadForm">
     <input type="file" id="imageInput" accept="image/*" required />
+    <br />
     <button type="submit">Analyze</button>
   </form>
 
