--- a/index.html
+++ b/index.html
@@ -3,54 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Face Beauty Analyzer</title>
+  <title>Facial Attractiveness Analyzer</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 40px auto;
-      max-width: 600px;
       text-align: center;
+      padding: 2rem;
     }
-
-    input[type="file"] {
-      margin-top: 20px;
-    }
-
-    button {
-      margin-top: 10px;
-      padding: 8px 16px;
-    }
-
     canvas {
-      margin-top: 20px;
+      margin-top: 1rem;
       max-width: 100%;
       border: 1px solid #ccc;
     }
-
-    #result {
-      margin-top: 20px;
-      font-size: 1.1em;
+    .result {
+      margin-top: 1rem;
+      font-size: 1rem;
     }
-
+    .measurement {
+      font-weight: bold;
+    }
     .ideal {
-      color: gray;
-      font-size: 0.9em;
-      margin-left: 6px;
+      color: #888;
+      font-style: italic;
+      margin-left: 0.5rem;
+    }
+    #analyzedCanvas {
+      display: none;
     }
   </style>
 </head>
 <body>
-  <h1>Face Beauty Analyzer</h1>
-
+  <h1>Facial Attractiveness Analyzer</h1>
   <form id="uploadForm">
     <input type="file" id="imageInput" accept="image/*" required />
-    <br />
     <button type="submit">Analyze</button>
   </form>
-
-  <canvas id="overlayCanvas"></canvas>
-
-  <div id="result"></div>
+  
+  <canvas id="analyzedCanvas"></canvas>
+  <div id="results" class="result"></div>
 
   <script src="script.js"></script>
 </body>
