--- a/index.html
+++ b/index.html
@@ -3,44 +3,54 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Facial Attractiveness Analyzer</title>
+  <title>Face Beauty Analyzer</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      margin: 40px auto;
+      max-width: 600px;
       text-align: center;
-      padding: 2rem;
     }
+
+    input[type="file"] {
+      margin-top: 20px;
+    }
+
+    button {
+      margin-top: 10px;
+      padding: 8px 16px;
+    }
+
     canvas {
-      margin-top: 1rem;
+      margin-top: 20px;
       max-width: 100%;
       border: 1px solid #ccc;
     }
-    .result {
-      margin-top: 1rem;
-      font-size: 1rem;
+
+    #result {
+      margin-top: 20px;
+      font-size: 1.1em;
     }
-    .measurement {
-      font-weight: bold;
-    }
+
     .ideal {
-      color: #888;
-      font-style: italic;
-      margin-left: 0.5rem;
-    }
-    #analyzedCanvas {
-      display: none;
+      color: gray;
+      font-size: 0.9em;
+      margin-left: 6px;
     }
   </style>
 </head>
 <body>
-  <h1>Facial Attractiveness Analyzer</h1>
+  <h1>Face Beauty Analyzer</h1>
+
   <form id="uploadForm">
     <input type="file" id="imageInput" accept="image/*" required />
+    <br />
     <button type="submit">Analyze</button>
   </form>
-  
-  <canvas id="analyzedCanvas"></canvas>
-  <div id="results" class="result"></div>
+
+  <canvas id="overlayCanvas"></canvas>
+
+  <div id="result"></div>
 
   <script src="script.js"></script>
 </body>
